--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,30 @@
+#
+#
+#
+#
 
-
-
+#
+title: Page24
+title_separator : "-"
+subtitle:
+name :
+description :
+url:
+baseurl:
 BATH_PATH: https://takagotch.github.io/page24/
+repository: 
+teaser :
+logo :
+masthead_title :
+breadcrumbs :
+words_per_minute : 
+comments:
+#
+#
+#
+#
 
-
-
-
-
-
+author:
+  name : "takagotch"
+  
+  
